minor fixes for nav menu (white space normal)

--- a/src/sass/modules/_02-nav.scss
+++ b/src/sass/modules/_02-nav.scss
@@ -334,6 +334,7 @@
             text-decoration: none;
             letter-spacing: .5px;
             color: #385461;
+            white-space: normal;
 
             @include font(normal, 700, 18px, 21px, $ub);
             &:hover {
@@ -348,6 +349,7 @@
                 letter-spacing: .5px;
                 text-transform: none;
                 color: #023;
+                white-space: normal;
 
                 @include font(normal, 300, 14px, 21px, $ul);
                 &:hover {
